{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 10,
  "lineage": "b90f8ab1-6838-57f2-15ad-58823cf3edd0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330041397052:internet-gateway/igw-0fad5a24b4bb6a2b0",
            "id": "igw-0fad5a24b4bb6a2b0",
            "owner_id": "330041397052",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "tags_all": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-030773d7419978b10"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330041397052:route-table/rtb-058d2dfaa8b5ce128",
            "id": "rtb-058d2dfaa8b5ce128",
            "owner_id": "330041397052",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fad5a24b4bb6a2b0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table_dev"
            },
            "tags_all": {
              "Name": "public_route_table_dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-030773d7419978b10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a95c9e07e88523a2",
            "route_table_id": "rtb-058d2dfaa8b5ce128",
            "subnet_id": "subnet-064a16c38e6f576d5"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_route_table.public_routetable",
            "aws_subnet.public_subnet1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330041397052:security-group/sg-00b6ed71cd0b7028a",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b6ed71cd0b7028a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Public_security_group1_dev",
            "name_prefix": "",
            "owner_id": "330041397052",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030773d7419978b10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330041397052:subnet/subnet-064a16c38e6f576d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064a16c38e6f576d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330041397052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_public_subnet1_dev"
            },
            "tags_all": {
              "Name": "Terraform_public_subnet1_dev"
            },
            "vpc_id": "vpc-030773d7419978b10"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330041397052:subnet/subnet-0ceecdb202e894a77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.40.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceecdb202e894a77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330041397052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_public_subnet2_dev"
            },
            "tags_all": {
              "Name": "Terraform_public_subnet2_dev"
            },
            "vpc_id": "vpc-030773d7419978b10"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330041397052:vpc/vpc-030773d7419978b10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-03dffab8c93f25463",
            "default_route_table_id": "rtb-06b5b0f4d2789aa3b",
            "default_security_group_id": "sg-004fa7dcc10334f57",
            "dhcp_options_id": "dopt-0458738bd143b5504",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-030773d7419978b10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b5b0f4d2789aa3b",
            "owner_id": "330041397052",
            "tags": {
              "Name": "terraform-aws",
              "Owner": "Rajasekhar Polavarapu"
            },
            "tags_all": {
              "Name": "terraform-aws",
              "Owner": "Rajasekhar Polavarapu"
            }
          }
        }
      ]
    }
  ]
}